Cycles: can't bake to vertex colors unless there is 1 Uv Map ("No active Uv Layer found") #84416

Closed
opened 2021-01-05 16:45:55 +01:00 by Lopo Isaac · 6 comments

System Information
Operating system: Linux-5.4.0-58-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2021-01-03 01:04, hash: 1e8f266591
Worked: ?

Short description of error
Not sure if this is a bug but Blender complains when trying to bake to vertex colors and ask for at least 1 uvMap channel (even if we don't need it at all)

Exact steps for others to reproduce the error

  1. Factory reset
  2. Delete Uv Map channel in the default cube, create at least 1 vertex color channel
  3. Set Render > Bake > Output > Tartet: vertex colors and press bake button
  4. Bake fails (error at the Status Bar)
    Captura de pantalla de 2021-01-05 16-44-31.png
**System Information** Operating system: Linux-5.4.0-58-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2021-01-03 01:04, hash: `1e8f266591` Worked: ? **Short description of error** Not sure if this is a bug but Blender complains when trying to bake to vertex colors and ask for at least 1 uvMap channel (even if we don't need it at all) **Exact steps for others to reproduce the error** 1. Factory reset 2. Delete Uv Map channel in the default cube, create at least 1 vertex color channel 3. Set Render > Bake > Output > Tartet: vertex colors and press bake button 4. Bake fails (error at the Status Bar) ![Captura de pantalla de 2021-01-05 16-44-31.png](https://archive.blender.org/developer/F9551524/Captura_de_pantalla_de_2021-01-05_16-44-31.png)
Author

Added subscriber: @lowpolysaac

Added subscriber: @lowpolysaac
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-01-05 16:51:22 +01:00
Member

Can confirm, will check.

Can confirm, will check.

This issue was referenced by 211e161d76

This issue was referenced by 211e161d763cdfc1688236cc3adbfad8ae926831
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84416
No description provided.